# gpu-nvme-direct

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  bench_common.h  bench_cpu_memcpy.cu  bench_cpu_pinned.cu  bench_cufile.cu  bench_gpu_direct.cu  bench_sweep.py  plot_results.py
docs/: benchmarks.md  design.md  investigation-p2p-bar0.md  nvme-reference.md  safety.md
include/gpunvme/: block_io.h  controller.h  dma.h  error.h  layer_loader.h  mmio.h  nvme_cmds.h  nvme_regs.h  queue.h
kmod/: Kbuild  Makefile  gpunvme_chrdev.c  gpunvme_dma.c  gpunvme_internal.h  gpunvme_ioctl.h  gpunvme_main.c  gpunvme_pci.c
scripts/: buy_nvme_guide.md  check_prereqs.sh  post_reboot_test.sh  setup_kmod.sh  setup_vfio.sh  teardown.sh
src/device/: block_io.cu  cq_poll.cuh  doorbell.cuh  mmio_ops.cuh  queue_state.cuh  sq_submit.cuh
src/host/: admin.c  bar_map.c  controller.c  dma_alloc.c  io_queue.c  layer_loader.cu  monitor.c  pci_util.c
src/sim/: nvme_sim.c  nvme_sim.h
tests/: Makefile.p2p  test_bar1_dma.cu  test_bar_read.cu  test_large_read.cu  test_layer_loader.cu  test_multi_block.cu  test_nvme_structs.cpp  test_p2p_kmod.c  test_p2p_map.cu  test_p2p_pages.cu  test_sim_basic.cu  test_single_block.cu
tools/: check_p2p.cu  dump_bar0.c  nvme_identify.c  pcie_topology.sh  rm_bar0_register.c  test_devmem.cu  test_driver_api.cu  test_gpu_write.cu  test_gpu_write2.cu  test_gpu_write_bar0.cu
